clusters/main/apps/zeroclaw/ingress-lepi.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeroclaw-lepi
  namespace: zeroclaw
  annotations:
    tailscale.com/funnel: "false"
    tailscale.com/tags: "tag:zeroclaw"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: zeroclaw-lepi
      port:
        number: 3000
  tls:
    - hosts:
        - zeroclaw-lepi
